--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,48 +1,27 @@
   <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/paris');">
     <div class="banner-content">
-      <h1>Le Wagon Paris</h1>
-      <p>Learn to code with us in Paris</p>
+      <h1>Welcome Home</h1>
+      <p>Find the best flat for your holidays</p>
       <a class="btn btn-primary btn-lg">Start now</a>
     </div>
   </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>Le Wagon Shanghai</h2>
-          <p>Very cool city, the best</p>
+  <div class="container" id="home-flats">
+    <h2 class="text-center">Recent flats</h2>
+    <div class="row">
+      <% data.flats.each do |owner, flat| %>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('https://kitt.lewagon.com/placeholder/cities/<%= flat.city_slug %>');">
+            <div class="card-category"><%= flat.city_name %></div>
+            <div class="card-description">
+              <h3><%= flat.name %></h3>
+              <p><%= flat.description %></p>
+            </div>
+            <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{owner}", class:"card-user" %>
+            <%= link_to "", "flats/#{owner}.html", class: "card-link" %>
+          </div>
         </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-        <a class="card-link" href="#" ></a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>Le Wagon Berlin</h2>
-          <p>Very cool city, the best</p>
-        </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-        <a class="card-link" href="#" ></a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <!-- insert <div class="card"> -->
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/rio');">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>Le Wagon Rio</h2>
-          <p>Very cool city, the best</p>
-        </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-        <a class="card-link" href="#" ></a>
-      </div>
+      <% end %>
     </div>
   </div>
 </div>
